# FicusLang

./: .gitignore  CHANGELOG.md  Shapes.cabal  prog.ficu
app/: Ficu.hs  Main.hs  Notes.hs  SKI.hs  Shapes.hs  Struct.hs
threads-js/: .eslintrc.json  async_exec.mjs  jsconfig.json  main.js  package.json  worker.js
