cabal-version:      3.4
name:               Shapes
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Iain Moncrief
maintainer:         Iainmoncrief@gmail.com

-- build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Shapes
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Shapes, Notes, Struct, SKI, Ficu

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, blank-canvas, text, parsec
    hs-source-dirs:   app
    default-language: GHC2021
    GHC-options:      -threaded -Wall